--- a/templates/article.html
+++ b/templates/article.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - {{TITLE}}</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - {{TITLE}}</h1>
   {{CONTENT}}
 </div>
 <hr/>
